--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="content-block">
                 <div class="content-block-inner">
 
-	        <p>This repository contains themes for a bunch of different aspects of iOS, packages here require jailbroken iOS devices. If you’re on a jailbroken device, <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fcydia.hbang.ws%2F">
+	        <p>This repository contains themes for a bunch of different aspects of iOS, packages here require jailbroken iOS devices. If you’re on a jailbroken device, <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fdylanduff.github.io/repo%2F">
 		tap to add this repo to Cydia™ </a>.</p>
 	        
                 </div>
