--- a/depiction/com.SetupTeam.NextGenConvergance/index.html
+++ b/depiction/com.SetupTeam.NextGenConvergance/index.html
@@ -55,7 +55,7 @@
 
 <label>Other</label>
 <fieldset>
-<a href="/depictions/resources/donate.html">
+<a href="../resources/donate.html">
 <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
 <div>
 <div>
@@ -65,7 +65,7 @@
 </div>
 </div>
 </a>
-<a href="/depictions/resources/contact.html">
+<a href="../resources/contact.html">
 <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
 <div>
 <div>
