--- a/depiction/resources/contact.html
+++ b/depiction/resources/contact.html
@@ -15,7 +15,7 @@
 <panel>
 <label>Contact</label>
 <fieldset><div><div><label>
-    <p>Email - <a href="mailto:SetupTeam3@gmail.com" target="_new">SetupTeam3@gmail.com</a></p>
+    <p>Email - <a href="mailto:dylanduff00@gmail.com" target="_new">dylanduff00@gmail.com</a></p>
     <p>Reddit - <a href="https://www.reddit.com/user/DylanDuff_" target="_new">/u/DylanDuff_</a></p>
     <p>Twitter - <a href="https://twitter.com/DylanDuff3" target="_new">DylanDuff3</a></p>
 </label></div></div></fieldset>
