--- a/depiction/resources/donate.html
+++ b/depiction/resources/donate.html
@@ -16,7 +16,7 @@
 <panel>
 <label>Donate</label>
 <fieldset><div><div><label>
-<p>If you would like to buy me a cup of coffee, you can doante using PayPal, Thanks!</p>
+<p>This Page will redirect to my donations page shortly...</p>
 <br><center>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
