--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="content-block">
                 <div class="content-block-inner">
 
-	        <p>This repository contains themes for a bunch of different aspects of iOS, packages here require jailbroken iOS devices. If you’re on a jailbroken device, <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fdylanduff.github.io/repo%2F">
+	        <p>This repository contains themes for a bunch of different aspects of iOS, packages here require jailbroken iOS devices. If you’re on a jailbroken device, <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://dylanduff.github.io/repo/">
 		tap to add this repo to Cydia™ </a>.</p>
 	        
                 </div>
@@ -53,11 +53,11 @@
                       </div></a></li>
                   <li><a href="cars.html" data-context-name="cars" class="item-link item-content">
                       <div class="item-inner">
-                        <div class="item-title">My Cars</div>
+                        <div class="item-title">Donate</div>
                       </div></a></li>
                   <li><a href="contacts.html" class="item-link item-content">
                       <div class="item-inner">
-                        <div class="item-title">Contacts</div>
+                        <div class="item-title">Contact</div>
                       </div></a></li>
                 </ul>
               </div>
